Bug fix: fix overflow-x

--- a/src/sass/base/_elements.scss
+++ b/src/sass/base/_elements.scss
@@ -8,7 +8,6 @@
     top: 0;
     right: 0;
     bottom: 0;
-    width: 100vw;
     height: 100vh;
     background: $space-blue;
     opacity: 1;
@@ -46,7 +45,7 @@
 #main-content {
     position: absolute;
     left: 0;
-    right: 0;
+    width: 100%;
     bottom: 0;
     top: 5.5em;
 
